# RiftWaveSuite_RiftSynth_WaveForm_Lite

./: README.md
RiftSynth-Pro/: CMakeLists.txt  README.md
RiftSynth-Pro/Assets/SFX/: README.md
RiftSynth-Pro/Plugins/RiftSynthPro/: CMakeLists.txt  README.md
RiftSynth-Pro/Plugins/RiftSynthPro/Presets/: BossPhase.rwspreset  DarkArp.rwspreset  EvolvingPad.rwspreset  MachineStab.rwspreset  NeonMinor.rwspreset  RitualBass.rwspreset  SeedChoir.rwspreset
RiftSynth-Pro/Plugins/RiftSynthPro/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
RiftSynth-Pro/Shared/Analysis/: AnalyzerState.h
RiftSynth-Pro/Shared/Core/: SessionDebugSnapshot.h  StepScheduler.h  TransportState.h
RiftSynth-Pro/Shared/Export/: MidiExportStub.h
RiftSynth-Pro/Shared/Presets/: TaggedPresetIndex.h
RiftSynth-Pro/Shared/Synth/: BandlimitedOscillator.cpp  BandlimitedOscillator.h
RiftSynth-Pro/Shared/UI/: PresetBrowserComponent.h  SceneRenderer.h  SeedStripComponent.h  ThemeBank.h
RiftSynth-Pro/docs/: HOST_VALIDATION_MATRIX.md  KNOWN_LAST_MILE_BLOCKERS_V10.md
RiftSynth-Pro/scripts/: validate_suite.py
RiftWave-Shared-Framework/: README.md
RiftWave-Shared-Framework/Shared/Core/: ProductConfig.h  ProductTypes.h  ReleaseIdentity.h
RiftWave-Shared-Framework/Shared/Presets/: SeedFavoritesStore.h  UserPresetStore.h
RiftWave-Shared-Framework/Shared/Seed/: SeedEngine.h
RiftWave-Shared-Framework/Shared/Synth/: SimpleVoice.h
RiftWave-Shared-Framework/Shared/UI/: PresetBrowserComponent.cpp  SeedStripComponent.cpp
RiftWave-Shared-Framework/docs/: ARCHIVE_MANIFEST_V10.md  AUDIT_V10.md  COMPLETION_PLAN.md  HOST_VALIDATION_PLAYBOOK_V8.md  IMPLEMENTATION_STATUS_V10.md  LOCAL_SHIP_GATE_V10.md  NEXT_DARPA_ENHANCEMENTS.md
RiftWave-Shared-Framework/release/: installer_manifest.json
RiftWave-Shared-Framework/scripts/: bootstrap_windows.bat  build_manifest.py  seed_bank_generator.py
WaveForm-Pro/: CMakeLists.txt  README.md
WaveForm-Pro/Plugins/WaveFormPro/: CMakeLists.txt  README.md
WaveForm-Pro/Plugins/WaveFormPro/Presets/: MasterBusClean.rwspreset  OrbitHeat.rwspreset  PulseWallStream.rwspreset  RibbonGlass.rwspreset  SpectralLadder.rwspreset  StereoTunnel.rwspreset
WaveForm-Pro/Plugins/WaveFormPro/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
WaveForm-Pro/Shared/Core/: CompileReadiness.h  ProductIdentity.h
WaveForm-Pro/Shared/Export/: MidiDragSource.h
WaveForm-Pro/Shared/Synth/: OversamplingEngine.h
WaveForm-Pro/Shared/UI/: NeonLookAndFeel.h  PerformanceModeController.h  UiSfxEngine.h
WaveForm-Pro/cmake/: RiftWaveCommon.cmake
WaveForm-Pro/docs/: PRESET_CONTENT_FREEZE_V10.md  QA_CHECKLIST.md
WaveForm-Pro/release/: artifact_targets.json
WaveForm-Pro/scripts/: bootstrap_macos.sh  host_validation_matrix.json  local_release_prep.py  smoke_test_checklist.py  triage_failures.py
WaveForm-RiftSynth-Lite/: CMakeLists.txt  README.md
WaveForm-RiftSynth-Lite/Plugins/WaveFormRiftSynthLite/: CMakeLists.txt  README.md
WaveForm-RiftSynth-Lite/Plugins/WaveFormRiftSynthLite/Presets/: GlowSeed.rwspreset  HybridWow.rwspreset  INIT.rwspreset  OrbitGlow.rwspreset
WaveForm-RiftSynth-Lite/Plugins/WaveFormRiftSynthLite/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
WaveForm-RiftSynth-Lite/Shared/Analysis/: AnalyzerState.cpp
WaveForm-RiftSynth-Lite/Shared/Core/: AttachmentSet.h  ParameterBinding.h  ParameterSmootherBank.h  SharedParameters.h  SuiteVersion.h
WaveForm-RiftSynth-Lite/Shared/Export/: WavPreviewExporter.h
WaveForm-RiftSynth-Lite/Shared/Playback/: PatternPlayer.h
WaveForm-RiftSynth-Lite/Shared/Presets/: PresetBank.h  PresetCodec.h
WaveForm-RiftSynth-Lite/Shared/Seed/: SeedEngine.cpp
WaveForm-RiftSynth-Lite/Shared/Synth/: SimpleVoice.cpp
WaveForm-RiftSynth-Lite/Shared/UI/: AnalyzerComponent.cpp  AnalyzerComponent.h  SceneRenderer.cpp
WaveForm-RiftSynth-Lite/docs/: COMPILE_READINESS_V8.md  FEATURE_MATRIX.md  RELEASE_GATE.md
WaveForm-RiftSynth-Lite/scripts/: package_release_stub.py  release_metadata.json
